--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-    <head></head>
+    <head>
+        <title>boommee&panhia</title>
+        <link rel="stylesheet" href="index.css" />
+    </head>
     <body>
         <header></header>
         <main>
