--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
-        <header></header>
-        <main>
+        <header>
+            <h1>Boommee&Panhia</h1>
             <h1>Hello world!</h1>
             <p>contact boommee@panhiathao.com</p>
+        </header>
+        <main>
+            <section>
+            <p>1</p>
+            </section>
+            <section>
+                <p>2</p>
+            </section>
+            <section>3</section>
         </main>
         <footer>panhiathao.com &copy; 2020</footer>
     </body>
